syntax = "proto2";

package info.anodsplace.headunit.aap.protocol.proto;
option java_outer_classname = "Sensors";

import "common.proto";

enum SensorsMsgType {
    SENSOR_STARTREQUEST = 0x8001;
    SENSOR_STARTRESPONSE = 0x8002;
    SENSOR_EVENT = 0x8003;
}

enum SensorType
{
    LOCATION = 1;
    COMPASS = 2;
    CAR_SPEED = 3;
    RPM = 4;
    ODOMETER = 5;
    FUEL_LEVEL = 6;
    PARKING_BRAKE = 7;
    GEAR = 8;
    DIAGNOSTICS = 9;
    NIGHT = 10;
    ENVIRONMENT = 11;
    HVAC = 12;
    DRIVING_STATUS = 13;
    DEAD_RECONING = 14;
    PASSENGER = 15;
    DOOR = 16;
    LIGHT = 17;
    TIRE = 18;
    ACCEL = 19;
    GYRO = 20;
    GPS = 21;
}

message SensorBatch
{
    message LocationData
    {
        optional uint64 timestamp = 1;
        optional int32 latitude = 2;
        optional int32 longitude = 3;
        optional uint32 accuracy = 4;
        optional int32 altitude = 5;
        optional int32 speed = 6;
        optional int32 bearing = 7;
    }
    message RpmData
    {
        optional int32 rpm = 1;
    }
    message FuelData
    {
        optional int32 fuellevel = 1;
        optional int32 range = 2;
        optional bool lowfuel = 3;
    }
    message DeadReckoningData
    {
        optional int32 steering_angel = 1;
        optional int32 wheel_speed = 2;
    }
    message NightData
    {
        optional bool is_night_mode = 1;
    }
    message ParkingBrakeData
    {
        optional bool is_engaged = 1;
    }
    message DrivingStatusData
    {
        enum Status
        {
            UNRESTRICTED = 0;
            NO_VIDEO = 1;
            NO_KEYBOARD_INPUT = 2;
            NO_VOICE_INPUT = 4;
            NO_CONFIG = 8;
            LIMIT_MESSAGE_LEN = 16;
            FULLY_RESTRICTED = 31;
        }
        optional int32 status = 1;
    }
    message GpsSatelliteData
    {
        message GpsSatellite
        {
            optional int32 prn = 1;
            optional int32 snr_e3 = 2;
            optional bool used_in_fix = 3;
            optional int32 azimuth_e3 = 4;
            optional int32 elevation_e3 = 5;
        }
        optional int32 number_in_use = 1;
        optional int32 number_in_view = 2;
        repeated GpsSatellite satellites = 3;
    }
    message GearData
    {
        enum GEAR
        {
            NEUTRAL = 0;
            FIRST = 1;
            SECOND = 2;
            THIRD = 3;
            FOURTH = 4;
            FIFTH = 5;
            SIXTH = 6;
            SEVENTH = 7;
            EIGHTH = 8;
            NINTH = 9;
            TENTH = 10;
            DRIVE = 100;
            PARK = 101;
            REVERSE = 102;
        }
        optional GEAR gear = 1;
    }
    message CompassData
    {
        optional int32 bearing_e6 = 1;
        optional int32 pitch_e6 = 2;
        optional int32 roll_e6 = 3;
    }
    message SpeedData
    {
        optional int32 speed_e6 = 1;
        optional bool cruise_engaged = 2;
        optional bool cruise_set_speed = 3;
    }
    message OdometerData
    {
        optional int32 kms_el = 1;
        optional int32 trip_kms_el = 2;
    }
    message DiagnosticsData
    {
        optional bytes diagnostics_byte = 1;
    }
    message EnvironmentData
    {
        optional int32 temperature_e3 = 1;
        optional int32 pressure_e3 = 2;
        optional int32 rain = 3;
    }
    message HvacData
    {
        optional int32 target_temperature_e3 = 1;
        optional int32 current_temperature_e3 = 2;
    }
    message AccelerometerData
    {
        optional int32 acceleration_x_e3 = 1;
        optional int32 acceleration_y_e3 = 2;
        optional int32 acceleration_z_e3 = 3;
    }
    message GyroscopeData
    {
        optional int32 rotation_speed_x_e3 = 1;
        optional int32 rotation_speed_y_e3 = 2;
        optional int32 rotation_speed_z_e3 = 3;
    }
    message DoorData
    {
        optional bool hood_open = 1;
        optional bool boot_open = 2;
        repeated bool door_open = 3;
    }
    message LightData
    {
        enum HeadlightState
        {
            HEADLIGHT_OFF = 0;
            HEADLIGHT_ON = 1;
            HEADLIGHT_HIGH_BEAM = 2;
            HEADLIGHT_AUTO = 3;
        }
        enum TurnIndicatorState
        {
            INDICATOR_OFF = 0;
            INDICATOR_LEFT = 1;
            INDICATOR_RIGHT = 2;
            INDICATOR_HAZARD = 3;
        }
        optional HeadlightState headlight = 1;
        optional TurnIndicatorState turn_indicator = 2;
        optional bool hazard_light_on = 3;
    }

    message PassengerData
    {
        optional bool passenger_present = 1;
    }

    repeated LocationData location_data = 1;
    repeated CompassData compass_data = 2;
    repeated SpeedData speed_data = 3;
    repeated RpmData rpm = 4;
    repeated OdometerData odometer_data = 5;
    repeated FuelData fuel_data = 6;
    repeated ParkingBrakeData parkingbrake_data = 7;
    repeated GearData gear_data = 8;
    repeated DiagnosticsData diagnostics_data = 9;
    repeated NightData night_mode = 10;
    repeated EnvironmentData enviorment_data = 11;
    repeated HvacData hvac_data = 12;
    repeated DrivingStatusData driving_status = 13;
    repeated DeadReckoningData dead_reckoning = 14;
    repeated PassengerData passenger_data = 15;
    repeated DoorData door_data = 16;
    repeated LightData light_data = 17;
    repeated AccelerometerData accel_data = 19;
    repeated GyroscopeData gyro_data = 20;
    repeated GpsSatelliteData gps_satellite_data = 21;
}

message SensorRequest
{
    optional SensorType type = 1;
    optional int64 min_update_period = 2;
}

message SensorResponse
{
    optional MessageStatus status = 1;
}